hphp/test/quick/typechecks-obj.php.expectf
object(C) (0) {
}
object(D) (0) {
}
NULL

Catchable fatal error: Argument 1 passed to f() must be an instance of C, stdClass given in %s on line 14
